# Atmosphere-lamp

./: .gitignore  README.md
ESP32-C3/ESP32-C3_Bluetooth/: ESP32-C3_Bluetooth.ino
ESP32-C3_Bluetooth/: ESP32-C3_Bluetooth.ino
build_local/: CMakeCache.txt  Makefile  cmake_install.cmake
crm/freeRTOS/include/: FreeRTOS.h
doc/: 各子模块详细设计.md  接线示意图.dio  架构设计.dio  架构设计.md  项目框架设计.md
mcu/Libraries/CMSIS/: stm32f1xx.h  system_stm32f1xx.h
mcu/Libraries/HAL_Driver/: stm32f1xx_hal_conf.h  stm32f1xx_hal_rcc_ex.h  stm32f1xx_hal_spi.h  stm32f1xx_hal_tim.h  stm32f1xx_hal_uart.h
mcu/Libraries/ld/: STM32F103C8_FLASH.ld
mcu/app/: CAN_RxDataHandle.c  CAN_RxDataHandle.h  app_basic_trunSL.c  app_basic_trunSL.h  app_can.c  app_can.h  app_debug.c  app_debug.h  app_display_policy.c  app_display_policy.h  app_dot_displayer.c  app_dot_displayer.h  app_gonio.c  app_gonio.h  app_state.c  app_state.h  app_trun_lamp.c  app_trun_lamp.h
mcu/bsp/: bsp_can.c  bsp_can.h  bsp_dma.c  bsp_dma.h  bsp_gpio.c  bsp_gpio.h  bsp_max7219.c  bsp_max7219.h  bsp_spi.c  bsp_spi.h  bsp_timer.c  bsp_timer.h  bsp_usart.c  bsp_usart.h
mcu/libx/: ERR.h  __port_type__.h  log.h  ringbuffer.h
mcu/project/: CMakeLists.txt  arm-gnu-none-eabi.cmake
mcu/user/: FreeRTOSConfig.h  event_bus.c  event_bus.h  freertos_hooks.c  main.c  stm32f1xx_it.c  system_boot.c  system_boot.h
project/: CMakeLists.txt  arm-gnu-none-eabi.cmake
